# vpn-control-panel

./: .dockerignore  .env.sample  .gitignore  .python-version  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  openapi.3x-ui-3.2.0.json  pyproject.toml
docs/: runtime-stack.md  smoke-checklist.md
local/: .env.local.sample  .gitignore  data.local.json.sample  init-nodes.py
nginx/: subscription-env.sh
nginx/templates/: subscription.conf.esh
src/vpn_control_plane/: __init__.py  __main__.py  app.py  config.py  provisioning.py
src/vpn_control_plane/backup/: __init__.py  __main__.py  archive.py  data.py  nodes.py  secrets.py
src/vpn_control_plane/crons/: base.py  geofiles.py  telegram_report.py
src/vpn_control_plane/data/: __init__.py  backup.py  models.py  store.py
src/vpn_control_plane/external_subscriptions/: __init__.py  __main__.py  cache.py  parser.py  service.py  slug.py
src/vpn_control_plane/http/: routes.py
src/vpn_control_plane/migrations/: __init__.py  subscription_ids.py
src/vpn_control_plane/monitoring/: __init__.py  detectors.py  notifier.py  service.py  state.py
src/vpn_control_plane/reports/: __init__.py  schedule.py  (+1 more)
tests/: test_backup.py  test_client_sync.py  test_config.py  test_crons.py  test_external_subscriptions.py  test_full_backup.py  test_geofiles_cron.py  test_hysteria2_link_normalization.py  test_monitoring.py  test_nginx_config.py  test_node_backups.py  test_provisioning.py  test_reports.py  test_state_store.py  test_subscription_service.py  test_telegram_bot.py  test_xui_client.py  test_xui_share_links.py
(+13 files in other folders)
