[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "vpn-control-plane"
version = "0.1.0"
description = "Private VPN control-plane for Telegram provisioning and subscription aggregation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.20,<4",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pillow>=10,<12",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.9,<3",
  "python-dotenv>=1,<2",
  "qrcode>=8,<9",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.26,<1",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<1",
]

[project.scripts]
vpn-control-plane = "vpn_control_plane.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vpn_control_plane"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["vpn_control_plane"]
